--- a/iGMS/Content/Style.css
+++ b/iGMS/Content/Style.css
@@ -5,3 +5,10 @@
 .confirmmanagercheck {
     display: inline-block
 }
+.number-notification {
+    background: red;
+    border-radius: 50%;
+    width: 15px;
+    height: 15%;
+    text-align: center;
+}
