--- a/iGMS/Views/SaleOrder/Index.cshtml
+++ b/iGMS/Views/SaleOrder/Index.cshtml
@@ -94,9 +94,9 @@
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">EPC</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 160px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 250px;" aria-label="Company Email: activate to sort column ascending">Serial</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 160px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Thành Tiền</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending"></th>
                         </tr>
@@ -215,8 +215,8 @@
                     </tbody>
                 </table>
                 <div style="transform: translate(80%, 0px);">
-                    <p>- Tổng Tiền Chiết Khấu : <span name="sumpricediscount"></span></p>
-                    <p>- Tổng Tiền Thuế : <span name="sumpricetax"></span></p>
+                    @*<p>- Tổng Tiền Chiết Khấu : <span name="sumpricediscount"></span></p>
+                    <p>- Tổng Tiền Thuế : <span name="sumpricetax"></span></p>*@
                     <p>- Tổng Tiền Đơn Hàng : <span name="sumpricedh"></span></p>
                 </div>
                 <p>Tổng Thành Tiền : <span name="Tong"></span></p>
