--- a/iGMS/Views/PurchaseOrder/Index2.cshtml
+++ b/iGMS/Views/PurchaseOrder/Index2.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "Lên Đơn Hàng Mua";
+    ViewBag.Title = "Lập Đơn Thêm Hàng Từ Kho";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <div class="card card-custom">
     <div class="card-header">
         <h3 class="card-title">
-            Lên Đơn Hàng Mua
+            Lập Đơn Thêm Hàng Từ Kho
         </h3>
     </div>
     <!--begin::Form-->
@@ -32,12 +32,12 @@
             <div class="col-9 col-form-label">
                 <div class="radio-inline">
                     <label class="radio radio-success">
-                        <input type="radio" value="CH"  name="radio"checked="checked" />
+                        <input type="radio" value="CH" name="radio" checked="checked" />
                         <span></span>
                         Cửa Hàng
                     </label>
                     <label class="radio radio-success">
-                        <input type="radio" name="radio" value="KH"  />
+                        <input type="radio" name="radio" value="KH" />
                         <span></span>
                         Kho Hàng
                     </label>
@@ -47,25 +47,25 @@
         <div class="form-group row">
             <label for="example-search-input" class="col-2 col-form-label">Nhập Tại Kho<span style="color:red"> (*) </span></label>
             <div class="col-10">
-                <select class="form-control" id="warehouse"disabled>
+                <select class="form-control" id="warehouse" disabled>
                 </select>
             </div>
         </div>
         <div class="form-group row">
             <label for="example-search-input" class="col-2 col-form-label">Nhập Tại Cửa Hàng<span style="color:red"> (*) </span></label>
             <div class="col-10">
-                <select class="form-control" id="store" >
+                <select class="form-control" id="store">
                 </select>
             </div>
         </div>
         <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Nhà Cung Cấp<span style="color:red"> (*) </span></label>
+            <label for="example-search-input" class="col-2 col-form-label">Xuất Từ Kho<span style="color:red"> (*) </span></label>
             <div class="col-10">
-                <select class="form-control" id="supplier">
+                <select class="form-control" id="XuatTuKho">
                 </select>
             </div>
         </div>
-        <div class="form-group  row">
+        <div class="form-group row">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
                 <div class="input-group ">
@@ -79,75 +79,24 @@
                         <path fill="#64B5F6" d="M20 7A13 13 0 1 0 20 33A13 13 0 1 0 20 7Z"></path>
                         <path fill="#BBDEFB" d="M26.9,14.2c-1.7-2-4.2-3.2-6.9-3.2s-5.2,1.2-6.9,3.2c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1C16,13.9,17.9,13,20,13s4,0.9,5.4,2.5c0.2,0.2,0.5,0.4,0.8,0.4c0.2,0,0.5-0.1,0.6-0.2C27.2,15.3,27.2,14.6,26.9,14.2z"></path>
                     </svg>
-                    <input class="form-control" type="search" placeholder="Tìm Mã Hàng" id="seachidgood" />
+                    <input class="form-control" type="search" placeholder="Tìm Mã Hàng" id="seachidgood1" />
                 </div>
-                @*<div id="Excel" hidden>
-            @using (Html.BeginForm("Upload", "PurchaseOrder", FormMethod.Get, new
-            {
-                enctype = "multipart/form-data"
-            }))
-            {<table> <tr> <td> Import (<a download href="~/Images/a.xlsx">Mẫu</a> </td> <td><input type="file" id="fileUpload" name="UploadedFile" /> </td> </tr><tr><td colspan="2"> <input type="submit" name="Submit" value="Submit" /> </td> </tr> </table>
-            }
-
-        </div>*@
-            <div id="Excel" hidden>
-                <input type="file" id="fileUpload" /><span>(<a download href="~/Images/PO iPOS.xlsx">Mẫu</a>)</span>
-            </div>
-                    <table class="table table-separate table-head-custom table-checkable dataTable no-footer dtr-inline" id="kt_datatable" role="grid" aria-describedby="kt_datatable_info" style="width: 1234px;">
-                        <thead>
-                            <tr role="row">
-                                <th data-field="RecordID" class="datatable-cell-center datatable-cell datatable-cell-check"><span style="width: 30px;"><label class="checkbox checkbox-single checkbox-all kt-checkbox--solid"><input type="checkbox" id="allchange">&nbsp;<span></span></label></span></th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 1000px;" aria-label="Company Email: activate to sort column ascending">Nhập Đủ Mã Serial </th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
-                                <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Thành Tiền</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tbd">
-                        </tbody>
-                    </table>
+                <div id="Excel" hidden>
+                    <input type="file" id="fileUpload" />
                 </div>
-            </div>
-        <div class="form-group row">
-            <label for="example-password-input" class="col-2 col-form-label">Tổng Tiền Hàng<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <div class="input-group">
-                    <h1 id="sumprice"></h1>
-                </div>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Phương Thức Thanh Toán<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <select class="form-control" id="paymethod">
-                </select>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Tiền Đã Trả<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <input class="form-control" type="text" placeholder="" value="0" id="partialpay" />
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Tiền Còn Nợ<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <h1 id="liabilities"></h1>
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Thời Hạn Thanh Toán<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <input class="form-control" type="date" placeholder="" id="datepay" />
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Ngày Giao Hàng<span style="color:red"> (*) </span></label>
-            <div class="col-10">
-                <input class="form-control" type="date" placeholder="" id="deliverydate" />
+                <table class="table table-separate table-head-custom table-checkable dataTable no-footer dtr-inline" id="kt_datatable" role="grid" aria-describedby="kt_datatable_info" style="width: 1234px;">
+                    <thead>
+                        <tr role="row">
+                            <th data-field="RecordID" class="datatable-cell-center datatable-cell datatable-cell-check"><span style="width: 30px;"><label class="checkbox checkbox-single checkbox-all kt-checkbox--solid"><input type="checkbox" id="allchange">&nbsp;<span></span></label></span></th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbd">
+                    </tbody>
+                </table>
             </div>
         </div>
         <div class="form-group row">
@@ -174,7 +123,7 @@
             <div class="col-2">
             </div>
             <div class="col-10">
-                <button type="submit" id="add" class="btn btn-success mr-2" onclick="Add()">Tạo Đơn Hàng</button>
+                <button type="submit" id="add" class="btn btn-success mr-2" onclick="Add1()">Tạo Đơn Hàng</button>
                 <button type="submit" hidden id="addex" class="btn btn-success mr-2" onclick="AddEX()">Tạo Đơn Hàng</button>
                 <a href="/PurchaseOrder/Index" type="reset" class="btn btn-secondary">Cancel</a>
             </div>
@@ -184,13 +133,10 @@
 <div class="modal" id="BILL" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document" style="max-width:1100px">
         <div class="modal-content">
-            <div class="modal-body"  id="in">
+            <div class="modal-body" id="in">
                 <div class="row">
                     <div class="col-6">
-                        <p> <span name="namesupplier"></span></p>
-                        <p><span name="addresssupplier"></span></p>
-                        <p>ĐT : <span name="phonesupplier"></span> -  <span name="faxsupplier"></span></p>
-
+                        <p> <span name="namewarehouse"></span></p>
                     </div>
                     <div class="col-4" style="transform: translate(60%, 0px);">
                         <p>Số ĐH : <span name="iddh"></span></p>
@@ -199,37 +145,26 @@
                     <div class="col-2" style="transform: translate(30%, 0px);">
                         <div id="qrcode"></div>
                     </div>
-
                 </div>
                 <div class="" style="text-align:center">
-                    <h1>Đơn Hàng Mua</h1>
+                    <h1>Đơn Nhập Hàng</h1>
                 </div>
-                <p >- Nhà Cung Cấp : <span name="namesupplier"></span></p>
-                <p>- Địa Chỉ :<span name="addresssupplier"></span></p>
-                <p>- Phương Thức Thanh Toán : <span name="paydh"></span></p>
-                <p>- Thời Hạn Thanh Toán : <span name="datepaydh"></span></p>
+                <p>- Nhà Cung Cấp : <span name="namewarehouse"></span></p>
                 <table class="table table-bordered" id="kt_datatable" role="grid" aria-describedby="kt_datatable_info" style="width:100%;">
                     <thead>
                         <tr role="row">
                             <th>Stt</th>
-                            <th class="">Mã</th>
                             <th class="">Mã Hàng</th>
-                            <th class="">Serial</th>
                             <th class="">Tên Hàng</th>
-                            <th class="">Đơn Giá</th>
-                            <th class="">Thành Tiền</th>
+                            <th class="">Số Lượng</th>
                         </tr>
                     </thead>
                     <tbody id="tbdmodal">
                     </tbody>
                 </table>
-                <div style="transform: translate(80%, 0px);">
-                    <p>- Tổng Tiền Đơn Hàng : <span name="sumpricedh"></span></p>
-                </div>
-                 <p>Tổng Thành Tiền : <span name="Tong"></span></p>
                 <div class="row" style="text-align:center">
-                    <div class="col-6" >
-                        <p ><span name="namesupplier"></span></p>
+                    <div class="col-6">
+                        <p><span name="namesupplier"></span></p>
                         <p name="">Người Xác Nhận</p>
                         <p name="">(Ký, ghi rõ họ tên)</p>
                     </div>
@@ -241,7 +176,7 @@
                 </div>
             </div>
             <div class="modal-footer" id=hide>
-                <a type="button"  href="/PurchaseOrder/Index"  class="btn btn-secondary" >Close</a>
+                <a type="button" href="/PurchaseOrder/Index2" class="btn btn-secondary">Close</a>
                 <button type="button" onclick="printDiv('in')" class="btn btn-primary">IN</button>
             </div>
         </div>
@@ -251,33 +186,9 @@
 @section scripts{
     <script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
     <script>
-        Supplier();
         WareHouse();
         Store();
         PayMethod();
-       
-       
-        
-        //--------------------Select::Supplier--------------
-        function Supplier() {
-            $.ajax({
-                url: '/purchaseorder/Supplier',
-                type: 'get',
-                success: function (data) {
-                    $('#supplier').empty();
-                    if (data.code == 200) {
-                        let table = '<option value="-1">Chọn Nhà Cung Cấp</option>'
-                        table += '<option value="0">Import Excel</option>'
-                        $.each(data.c, function (k, v) {
-                            table += '<option value="' + v.id + '">' + v.name + '</option>'
-                        });
-                        $('#supplier').append(table);
-                    } else (
-                        alert(data.msg)
-                    )
-                }
-            })
-        }
         function PayMethod() {
             $.ajax({
                 url: '/purchaseorder/PayMethod',
@@ -302,12 +213,14 @@
                 type: 'get',
                 success: function (data) {
                     $('#warehouse').empty();
+                    $('#XuatTuKho').empty();
                     if (data.code == 200) {
                         let table = '<option value="-1">Chọn Kho Hàng</option>'
                         $.each(data.c, function (k, v) {
                             table += '<option value="' + v.id + '">' + v.name + '</option>'
                         });
                         $('#warehouse').append(table);
+                        $('#XuatTuKho').append(table);
                     } else (
                         alert(data.msg)
                     )
@@ -336,3 +249,6 @@
     </script>
     <script src="~/Scripts/PurchaseOrder.js"></script>
 }
+
+
+
